--- a/references.bib
+++ b/references.bib
@@ -573,3 +573,114 @@
 	pages = {73--90},
 	file = {Springer Full Text PDF:/Users/neilweidinger/Zotero/storage/WXRI6S9S/Zakian et al. - 2016 - Concurrent Cilk Lazy Promotion from Tasks to Thre.pdf:application/pdf},
 }
+    
+@misc{noauthor_rayon_2022,
+	title = {Rayon},
+	url = {https://github.com/rayon-rs/rayon},
+	abstract = {Rayon: A data parallelism library for Rust},
+	urldate = {2022-04-05},
+	publisher = {rayon-rs},
+	month = apr,
+	year = {2022},
+	note = {original-date: 2014-10-02T15:38:05Z},
+}
+
+    
+    
+@misc{noauthor_rayon_nodate,
+	title = {Rayon {I}/{O} operations warning},
+	url = {https://docs.rs/rayon/latest/rayon/fn.join.html#warning-about-blocking-io},
+	urldate = {2022-04-05},
+	file = {join in rayon - Rust:/Users/neilweidinger/Zotero/storage/6JTZV6CA/fn.join.html:text/html},
+}
+
+
+@misc{weidinger_rayon-lh_2021,
+	title = {Rayon-{LH}},
+	url = {https://github.com/neilweidinger/rayon},
+	abstract = {Rayon: A data parallelism library for Rust},
+	urldate = {2022-04-05},
+	author = {Weidinger, Neil},
+	month = dec,
+	year = {2021},
+	note = {original-date: 2021-12-22T16:30:00Z},
+}
+    
+@misc{noauthor_does_nodate,
+	title = {Does `rayon::spawn` block until a thread is available? · {Issue} \#522 · rayon-rs/rayon},
+	shorttitle = {Does `rayon},
+	url = {https://github.com/rayon-rs/rayon/issues/522},
+	abstract = {This is not currently documented. IMO it should block until a thread is available, to prevent firing off a million threads. Thanks!},
+	language = {en},
+	urldate = {2022-04-05},
+	journal = {GitHub},
+	file = {Snapshot:/Users/neilweidinger/Zotero/storage/Y5FFPB4A/522.html:text/html},
+}
+
+@misc{rodyamirov_how_2020,
+	type = {Reddit {Post}},
+	title = {How can {I} mix rayon and tokio properly?},
+	url = {www.reddit.com/r/rust/comments/gwm84y/how_can_i_mix_rayon_and_tokio_properly/},
+	urldate = {2022-04-05},
+	journal = {r/rust},
+	author = {rodyamirov},
+	month = jun,
+	year = {2020},
+	file = {Reddit Post Snapshot:/Users/neilweidinger/Zotero/storage/5F7APEQA/how_can_i_mix_rayon_and_tokio_properly.html:text/html},
+}
+
+@misc{joel_dashmap_2022,
+	title = {{DashMap}},
+	copyright = {MIT},
+	url = {https://github.com/xacrimon/dashmap},
+	abstract = {Blazing fast concurrent HashMap for Rust.},
+	urldate = {2022-04-05},
+	author = {Joel},
+	month = apr,
+	year = {2022},
+	note = {original-date: 2019-12-06T21:48:39Z},
+	keywords = {concurrent, concurrent-data-structure, concurrent-map, concurrent-programming, data-structures, hashmap, hashtable},
+}
+    
+@misc{noauthor_rayon-sleep_2022,
+	title = {Rayon {Thread} {Sleep}/{Notification} {Mechanism}},
+	url = {https://github.com/rayon-rs/rayon/blob/1c5277f2b68a79a6746969ce0b1a7a211f340d54/rayon-core/src/sleep/README.md},
+	abstract = {Rayon: A data parallelism library for Rust},
+	urldate = {2022-04-05},
+	publisher = {rayon-rs},
+	month = apr,
+	year = {2022},
+	note = {original-date: 2014-10-02T15:38:05Z},
+}
+    
+@misc{noauthor_crossbeam_2022,
+	title = {Crossbeam},
+	url = {https://github.com/crossbeam-rs/crossbeam},
+	abstract = {Tools for concurrent programming in Rust},
+	urldate = {2022-04-05},
+	publisher = {Crossbeam},
+	month = apr,
+	year = {2022},
+	note = {original-date: 2015-05-13T18:10:54Z},
+	keywords = {concurrency, data-structures, lock-free, parallelism, rust, synchronization, threads},
+}
+
+@misc{kilian_c_nodate,
+	title = {C++ '{Type} {Erasure}' {Explained} {\textbar} {Dave} {Kilian}'s {Blog}},
+	url = {https://davekilian.com/cpp-type-erasure.html},
+	urldate = {2022-04-06},
+	author = {Kilian, Dave},
+	file = {C++ 'Type Erasure' Explained | Dave Kilian's Blog:/Users/neilweidinger/Zotero/storage/U8IWQBAN/cpp-type-erasure.html:text/html},
+}
+    
+@misc{noauthor_async-io_2022,
+	title = {async-io},
+	url = {https://github.com/smol-rs/async-io},
+	abstract = {Async I/O and timers},
+	urldate = {2022-04-06},
+	publisher = {smol-rs},
+	month = apr,
+	year = {2022},
+	note = {original-date: 2020-06-28T20:16:29Z},
+}
+
