--- a/dissertation.tex
+++ b/dissertation.tex
@@ -1176,7 +1176,7 @@ The goal of the Rayon-LH implementation is to provide the ability for users to
 easily parallelize their programs that involve not just compute bound
 operations, but operations that incur latency as well.
 
-Building on top of Rayon has allowed Rayon-LH to take advantage of the existing
+Building on top of Rayon allows Rayon-LH to take advantage of the existing
 infrastructure for classic work-stealing, and focus on extending the library
 with latency-hiding capabilities. Here a brief overview of the entire
 architecture of the implementation is presented, with details on the differences
